<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yqq="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/transparent"
    tools:context="com.yqq.touchtest.Activity.SecondActivity">
    <com.yqq.touchtest.MyWidget.MyTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        yqq:background="@color/grey"
        yqq:leftImg="@mipmap/ic_launcher"
        yqq:title="yqq"
        yqq:rightText="@string/app_name"/>
    <Button
        android:id="@+id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="to three"
        android:layout_below="@+id/titleBar"
        android:layout_margin="1dp"
        />
    <Button
        android:id="@+id/slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Slide"
        android:layout_below="@+id/bt"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/frameAnimation_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:layout_below="@+id/slide"
        android:layout_margin="1dp"
        />
    <Button
        android:id="@+id/frameAnimation_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:layout_below="@+id/frameAnimation_start"
        android:layout_margin="1dp"
        />
    <Button
        android:id="@+id/to_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_table"
        android:layout_below="@+id/frameAnimation_stop"
        android:layout_margin="1dp"
        />
    <Button
        android:id="@+id/to_swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_swipe"
        android:layout_below="@+id/to_table"
        android:layout_margin="1dp"
        />
    <ImageView
        android:id="@+id/pig_img"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_below="@+id/to_table"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
